Bug fix: Take Action Boxout and Button block spacing below missing
- Added a margin bottom for takeaction boxout
- Added bottom spacing for button blocks on posts

--- a/assets/src/scss/pages/post/_article-content.scss
+++ b/assets/src/scss/pages/post/_article-content.scss
@@ -259,6 +259,10 @@
       line-height: 24px;
     }
   }
+
+  .wp-block-buttons {
+    margin-bottom: $sp-3;
+  }
 }
 
 .post-details {
